// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PeriodsList should render properly 1`] = `
<WithStyles(TableRow)
  hover={true}
  onClick={[MockFunction]}
>
  <WithStyles(TableCell)>
    <WithStyles(IconButton)
      key="menu-btn"
      onClick={[Function]}
    >
      <pure(MoreVert) />
    </WithStyles(IconButton)>
    <WithStyles(Menu)
      anchorEl={null}
      id="holiday-menu-bar"
      key="menu-dropdown"
      onClose={[Function]}
      open={false}
    >
      <WithStyles(MenuItem)
        component={[Function]}
        onClick={[Function]}
        to="/holidays/bar/edit"
      >
        Éditer
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        onClick={[Function]}
      >
        Supprimer
      </WithStyles(MenuItem)>
    </WithStyles(Menu)>
  </WithStyles(TableCell)>
  <WithStyles(TableCell)>
    01-01-1942
  </WithStyles(TableCell)>
  <Hidden
    implementation="js"
    lgDown={false}
    lgUp={false}
    mdDown={true}
    mdUp={false}
    smDown={false}
    smUp={false}
    xlDown={false}
    xlUp={false}
    xsDown={false}
    xsUp={false}
  >
    <WithStyles(TableCell)
      key="paidHolidays"
      numeric={true}
    />
    <WithStyles(TableCell)
      key="unpaidHolidays"
      numeric={true}
    />
    <WithStyles(TableCell)
      key="conventionalHolidays"
      numeric={true}
    />
    <WithStyles(TableCell)>
      <WithStyles(Tooltip)
        placement="bottom"
        title="En attente de validation"
      >
        <pure(HourglassEmpty) />
      </WithStyles(Tooltip)>
    </WithStyles(TableCell)>
  </Hidden>
</WithStyles(TableRow)>
`;

exports[`PeriodsList should render with menu when click menu button 1`] = `
<WithStyles(TableRow)
  hover={true}
  onClick={[MockFunction]}
>
  <WithStyles(TableCell)>
    <WithStyles(IconButton)
      key="menu-btn"
      onClick={[Function]}
    >
      <pure(MoreVert) />
    </WithStyles(IconButton)>
    <WithStyles(Menu)
      anchorEl="foo"
      id="holiday-menu-bar"
      key="menu-dropdown"
      onClose={[Function]}
      open={true}
    >
      <WithStyles(MenuItem)
        component={[Function]}
        onClick={[Function]}
        to="/holidays/bar/edit"
      >
        Éditer
      </WithStyles(MenuItem)>
      <WithStyles(MenuItem)
        onClick={[Function]}
      >
        Supprimer
      </WithStyles(MenuItem)>
    </WithStyles(Menu)>
  </WithStyles(TableCell)>
  <WithStyles(TableCell)>
    01-01-1942
  </WithStyles(TableCell)>
  <Hidden
    implementation="js"
    lgDown={false}
    lgUp={false}
    mdDown={true}
    mdUp={false}
    smDown={false}
    smUp={false}
    xlDown={false}
    xlUp={false}
    xsDown={false}
    xsUp={false}
  >
    <WithStyles(TableCell)
      key="paidHolidays"
      numeric={true}
    />
    <WithStyles(TableCell)
      key="unpaidHolidays"
      numeric={true}
    />
    <WithStyles(TableCell)
      key="conventionalHolidays"
      numeric={true}
    />
    <WithStyles(TableCell)>
      <WithStyles(Tooltip)
        placement="bottom"
        title="En attente de validation"
      >
        <pure(HourglassEmpty) />
      </WithStyles(Tooltip)>
    </WithStyles(TableCell)>
  </Hidden>
</WithStyles(TableRow)>
`;

exports[`PeriodsList should render with partner name if displayPartnerName is true 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HolidayRow
    classes={Object {}}
    disableMenu={false}
    displayPartnerName={true}
    holiday={
      Object {
        "date": "1942-01-01",
        "id": "bar",
        "partner": Object {
          "firstName": "hello",
          "lastName": "world",
        },
        "periods": Array [],
        "status": "validated",
      }
    }
    onClick={[MockFunction]}
    onHolidayDelete={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <WithStyles(TableCell)
          className={undefined}
        >
          hello world
        </WithStyles(TableCell)>,
        <WithStyles(TableCell)
          className={undefined}
        >
          01-01-1942
        </WithStyles(TableCell)>,
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={true}
          mdUp={false}
          smDown={false}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(TableCell)
            numeric={true}
          />
          <WithStyles(TableCell)
            numeric={true}
          />
          <WithStyles(TableCell)
            numeric={true}
          />
          <WithStyles(TableCell)>
            <WithStyles(Tooltip)
              placement="bottom"
              title="Demande acceptée"
            >
              <pure(Check) />
            </WithStyles(Tooltip)>
          </WithStyles(TableCell)>
        </Hidden>,
      ],
      "className": undefined,
      "hover": true,
      "onClick": [MockFunction],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            "hello world",
            undefined,
          ],
          "className": undefined,
        },
        "ref": null,
        "rendered": Array [
          "hello world",
          undefined,
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "01-01-1942",
          "className": undefined,
        },
        "ref": null,
        "rendered": "01-01-1942",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            Array [
              <WithStyles(TableCell)
                numeric={true}
              />,
              <WithStyles(TableCell)
                numeric={true}
              />,
              <WithStyles(TableCell)
                numeric={true}
              />,
            ],
            <WithStyles(TableCell)>
              <WithStyles(Tooltip)
                placement="bottom"
                title="Demande acceptée"
              >
                <pure(Check) />
              </WithStyles(Tooltip)>
            </WithStyles(TableCell)>,
          ],
          "implementation": "js",
          "lgDown": false,
          "lgUp": false,
          "mdDown": true,
          "mdUp": false,
          "smDown": false,
          "smUp": false,
          "xlDown": false,
          "xlUp": false,
          "xsDown": false,
          "xsUp": false,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "paidHolidays",
            "nodeType": "class",
            "props": Object {
              "children": undefined,
              "numeric": true,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "unpaidHolidays",
            "nodeType": "class",
            "props": Object {
              "children": undefined,
              "numeric": true,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "conventionalHolidays",
            "nodeType": "class",
            "props": Object {
              "children": undefined,
              "numeric": true,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <WithStyles(Tooltip)
                placement="bottom"
                title="Demande acceptée"
              >
                <pure(Check) />
              </WithStyles(Tooltip)>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <pure(Check) />,
                "placement": "bottom",
                "title": "Demande acceptée",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <WithStyles(TableCell)
            className={undefined}
          >
            hello world
          </WithStyles(TableCell)>,
          <WithStyles(TableCell)
            className={undefined}
          >
            01-01-1942
          </WithStyles(TableCell)>,
          <Hidden
            implementation="js"
            lgDown={false}
            lgUp={false}
            mdDown={true}
            mdUp={false}
            smDown={false}
            smUp={false}
            xlDown={false}
            xlUp={false}
            xsDown={false}
            xsUp={false}
          >
            <WithStyles(TableCell)
              numeric={true}
            />
            <WithStyles(TableCell)
              numeric={true}
            />
            <WithStyles(TableCell)
              numeric={true}
            />
            <WithStyles(TableCell)>
              <WithStyles(Tooltip)
                placement="bottom"
                title="Demande acceptée"
              >
                <pure(Check) />
              </WithStyles(Tooltip)>
            </WithStyles(TableCell)>
          </Hidden>,
        ],
        "className": undefined,
        "hover": true,
        "onClick": [MockFunction],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              "hello world",
              undefined,
            ],
            "className": undefined,
          },
          "ref": null,
          "rendered": Array [
            "hello world",
            undefined,
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "01-01-1942",
            "className": undefined,
          },
          "ref": null,
          "rendered": "01-01-1942",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              Array [
                <WithStyles(TableCell)
                  numeric={true}
                />,
                <WithStyles(TableCell)
                  numeric={true}
                />,
                <WithStyles(TableCell)
                  numeric={true}
                />,
              ],
              <WithStyles(TableCell)>
                <WithStyles(Tooltip)
                  placement="bottom"
                  title="Demande acceptée"
                >
                  <pure(Check) />
                </WithStyles(Tooltip)>
              </WithStyles(TableCell)>,
            ],
            "implementation": "js",
            "lgDown": false,
            "lgUp": false,
            "mdDown": true,
            "mdUp": false,
            "smDown": false,
            "smUp": false,
            "xlDown": false,
            "xlUp": false,
            "xsDown": false,
            "xsUp": false,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "paidHolidays",
              "nodeType": "class",
              "props": Object {
                "children": undefined,
                "numeric": true,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "unpaidHolidays",
              "nodeType": "class",
              "props": Object {
                "children": undefined,
                "numeric": true,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "conventionalHolidays",
              "nodeType": "class",
              "props": Object {
                "children": undefined,
                "numeric": true,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <WithStyles(Tooltip)
                  placement="bottom"
                  title="Demande acceptée"
                >
                  <pure(Check) />
                </WithStyles(Tooltip)>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <pure(Check) />,
                  "placement": "bottom",
                  "title": "Demande acceptée",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
